--- a/style.css
+++ b/style.css
@@ -18,9 +18,6 @@
   margin: 0;
   padding: 0;
 }
-.search {
-  padding: 10px;
-}
 
 .res-card {
   width: 200px;
@@ -58,4 +55,22 @@
 .filter-btn {
   margin: 10px;
   cursor: pointer;
+  line-height: 0px;
+}
+.shimmer-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+.shimmer-card {
+  margin: 20px;
+  width: 200px;
+  height: 300px;
+  background-color: #f0f0f0;
+}
+.search input {
+  margin: 10px;
+}
+.filter {
+  display: flex;
 }
